Corrijo Ejercicio 9 con clase Pair